# biotech-analyst-cli

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  README.md  main.py  pyproject.toml
.jules/: bolt.md  sentinel.md
docs/: architecture.md  bdscan_refactor.md  bdscan_spec.md  cli_spec.md  de-dup-refactor.md  roadmap.md
src/agents/: learning.md
src/agents/bdscan_agents/: __init__.py  compile_landscape.py  (+7 more)
src/cli/: main.py
src/core/: bdscan_orchestrator.py  config.py  deepdive_orchestrator.py  exceptions.py
src/services/: llm_client.py
src/tools/: classify_interventions.py  fetch_anzctr_ctis.py  fetch_china_direct.py  fetch_chinese_registries.py  fetch_clinicaltrials.py  fetch_conferences.py  fetch_ip_lens.py  fetch_openfda.py  fetch_pubchem.py  summarize_conferences.py  summarize_openfda.py  summarize_pubchem.py
src/utils/: convert_md_to_pdf.py  fetch_anzctr_ctis.py  fetch_china_direct.py  fetch_chinese_registries.py  fetch_clinicaltrials.py  fetch_conferences.py  fetch_ip_lens.py  fetch_openfda.py  fetch_pubchem.py  formatting.py  generate_landscape_table.py  parse_pdf.py  query_parser.py  run_tests.py  summarize_anzctr_ctis.py  summarize_china_direct.py  summarize_chinese_registries.py  summarize_clinicaltrials.py  summarize_conferences.py  summarize_ip_lens.py  summarize_openfda.py  summarize_pubchem.py  test_agents.py  test_config.py  validate_report.py
tests/: run_tests.py  test_agents.py  test_classify_interventions.py  test_concurrency.py  test_config.py  test_landscape_modules.py  test_query_parser.py  test_reconciliation.py
(+8 files in other folders)
