[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biotech-analyst-cli"
version = "0.1.0"
description = "Biotech BD Sourcing and Diligence CLI using a White Rabbit themed assistant."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "duckduckgo-search>=8.1.1",
    "httpx>=0.28.1",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.13.4",
    "pymupdf",
    "rich>=15.0.0",
    "typer>=0.26.7",
    "markdown-pdf>=1.13.2",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.9",
    "playwright>=1.60.0",
    "pypdf>=6.12.2",
]

[project.scripts]
ba = "src.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true
